<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/today"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subscription"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/title_padding_negative"
            android:background="@color/notification"
            android:paddingLeft="@dimen/text_padding"
            android:text="@string/zero"
            android:textColor="@color/screen_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/title_padding_negative"
            android:paddingRight="@dimen/title_padding"
            android:src="@drawable/ic_bell" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_title"
        android:background="@color/divider_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/corona_width"
                        android:layout_height="@dimen/corona_height"
                        android:layout_margin="@dimen/title_padding"
                        android:src="@drawable/corona" />

                    <ImageView
                        android:layout_width="@dimen/corona_width"
                        android:layout_height="@dimen/corona_height"
                        android:layout_margin="@dimen/title_padding"
                        android:src="@drawable/corona" />

                    <ImageView
                        android:layout_width="@dimen/corona_width"
                        android:layout_height="@dimen/corona_height"
                        android:layout_margin="@dimen/title_padding"
                        android:src="@drawable/corona" />

                    <ImageView
                        android:layout_width="@dimen/corona_width"
                        android:layout_height="@dimen/corona_height"
                        android:layout_margin="@dimen/title_padding"
                        android:src="@drawable/corona" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_text"
                android:background="@drawable/ic_launcher_background"
                android:text="@string/full_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/full_text"
                android:background="#27769E"
                android:drawablePadding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="#000000"
                    android:padding="@dimen/title_padding"
                    android:text="Unlock today's lesson"
                    android:textColor="@color/screen_bg"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/title_padding"
                    android:rotation="180"
                    android:src="@drawable/ic_forward" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/title_padding"
                    android:src="@drawable/ic_forward" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/full_text"
                        android:textColor="@color/screen_bg"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/title_padding"
                        android:background="@drawable/bg_text_round_coners"
                        android:paddingLeft="20dp"
                        android:paddingTop="@dimen/title_padding"
                        android:paddingRight="20dp"
                        android:paddingBottom="@dimen/title_padding"
                        android:text="Ends at 23:00"
                        android:textColor="@color/screen_bg"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_oval_white"
                        android:padding="@dimen/title_padding"
                        android:src="@drawable/ic_flame" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/bg_oval_white"
                        android:padding="@dimen/text_padding"
                        android:text="0" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/title_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:src="@drawable/ic_menu_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/menu_home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:src="@drawable/ic_menu_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/menu_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:src="@drawable/ic_menu_mic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/menu_speak" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:src="@drawable/ic_menu_library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/menu_lib" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:src="@drawable/ic_menu_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/menu_profile" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>